--- a/books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md
+++ b/books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md
@@ -83,8 +83,7 @@ WAR 파일의 가장 중요한 점은 배포 명세서(web.xml)이 있다는 것
 
 톰캣은 몇 가지 구성요소로 이루어져 있는데, 대표적으로 카타리나와 재스퍼가 있다. 
 
-실행 중인 톰캣 인스턴스는 webapps 디렉터리에서 일어난 변화를 감지한다. 예를 들어 BookingApplication.war라는 WAR파일을 webapps 디렉터리에 배포하면 그 파일은 BookingApplication 디렉터리에 압축을 푼다. 탐캣은 WEB-INF 하위에 있는 web.xml 파일 읽고 정의대로 애플리케이션을 실행하고 /BookingApplication 경로를 통해 클라이언트에 제공한다.
-
+실행 중인 톰캣 인스턴스는 webapps 디렉터리에서 일어난 변화를 감지한다. 예를 들어 BookingApplication.war라는 WAR파일을 webapps 디렉터리에 배포하면 자동으로 BookingApplication 디렉터리에 압축을 푼다. 그리고 WEB-INF 하위에 있는 web.xml 파일 읽고 정의대로 애플리케이션을 실행한다.  
 
 
 
@@ -93,11 +92,11 @@ WAR 파일의 가장 중요한 점은 배포 명세서(web.xml)이 있다는 것
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTIwMjU2ODU3LC0yMTE0Mzg4NTkzLDc1Mz
-c5NTE3OSw0NDkxNjk5OSwtNjIwNzY5MTIyLC0xMTE3NjQxMjkx
-LDE2NTE4Mjg0NjUsLTE0MjA0OTA2NjUsLTM5MjI5NzE5LC02MD
-ExNjI5ODMsNzA5OTgxNjY4LC0xOTI2NTgwMjA0LDUzMjMyMDA5
-NiwxNzUzNzQ4ODEyLDY0NDUxNDQ1NywxMzAxNTIyNjE1LC0xNT
-A2ODMwNjk4LC0xMzE2MjkxMjUsLTg1MDM2MzY3OSwtMTE2MDAz
-ODM1M119
+eyJoaXN0b3J5IjpbLTg5MTc0MDg1OCwtMjExNDM4ODU5Myw3NT
+M3OTUxNzksNDQ5MTY5OTksLTYyMDc2OTEyMiwtMTExNzY0MTI5
+MSwxNjUxODI4NDY1LC0xNDIwNDkwNjY1LC0zOTIyOTcxOSwtNj
+AxMTYyOTgzLDcwOTk4MTY2OCwtMTkyNjU4MDIwNCw1MzIzMjAw
+OTYsMTc1Mzc0ODgxMiw2NDQ1MTQ0NTcsMTMwMTUyMjYxNSwtMT
+UwNjgzMDY5OCwtMTMxNjI5MTI1LC04NTAzNjM2NzksLTExNjAw
+MzgzNTNdfQ==
 -->
