--- a/books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md
+++ b/books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md
@@ -81,7 +81,10 @@ WAR 파일의 가장 중요한 점은 배포 명세서(web.xml)이 있다는 것
 
 > 톰캣의 구성 요소(component) 
 
-톰캣은 몇 가지 구성요소로 이루어져 있는데, 대표적으로 카타리나와 재스퍼가 있다. 
+톰캣은 몇 가지 구성요소로 이루어져 있는데, 대표적으로 카타리나와 재스퍼가 있다. 카타리나는 서블릿 컨테이너를 나타내고,  
+**Tomcat** - is a web server, which is having the following components: - Catalina - Servlet container name - Jasper - JSP engine - Coyote - HTTP connector - Cluster - is load balancer to manage large scale application.
+
+
 
 실행 중인 톰캣 인스턴스는 webapps 디렉터리에서 일어난 변화를 감지한다. 예를 들어 BookingApplication.war라는 WAR파일을 webapps 디렉터리에 배포하면 자동으로 BookingApplication 디렉터리에 압축을 푼다. 그리고 WEB-INF 하위에 있는 web.xml 파일 읽고 정의대로 애플리케이션을 실행한다.  
 
@@ -92,7 +95,7 @@ WAR 파일의 가장 중요한 점은 배포 명세서(web.xml)이 있다는 것
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTg5MTc0MDg1OCwtMjExNDM4ODU5Myw3NT
+eyJoaXN0b3J5IjpbMTA5ODI3NjU5MSwtMjExNDM4ODU5Myw3NT
 M3OTUxNzksNDQ5MTY5OTksLTYyMDc2OTEyMiwtMTExNzY0MTI5
 MSwxNjUxODI4NDY1LC0xNDIwNDkwNjY1LC0zOTIyOTcxOSwtNj
 AxMTYyOTgzLDcwOTk4MTY2OCwtMTkyNjU4MDIwNCw1MzIzMjAw
