books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md updated from https://stackedit.io/

--- a/books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md
+++ b/books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md
@@ -81,8 +81,9 @@ WAR 파일의 가장 중요한 점은 배포 명세서(web.xml)이 있다는 것
 
 > 톰캣의 구성 요소(component) 
 
-톰캣은 몇 가지 구성요소로 이루어져 있는데, 대표적으로 카타리나와 재스퍼가 있다. 카타리나는 서블릿 컨테이너를 나타내고,  
-**Tomcat** - is a web server, which is having the following components: - Catalina - Servlet container name - Jasper - JSP engine - Coyote - HTTP connector - Cluster - is load balancer to manage large scale application.
+톰캣은 몇 가지 구성요소로 이루어져 있는데, 대표적으로 카타리나와 재스퍼가 있다. 사실 톰캣의 핵심 컴포넌트는 카타리나이고 이거싱 탐캣으서블릿 명세의 실제 구현은 provides Tomcat's actual implementation of the servlet specification; when you [start up your Tomcat server](https://www.mulesoft.com/tomcat-start), you're actually starting Catalina.
+
+
 
 
 
@@ -95,7 +96,7 @@ WAR 파일의 가장 중요한 점은 배포 명세서(web.xml)이 있다는 것
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTA5ODI3NjU5MSwtMjExNDM4ODU5Myw3NT
+eyJoaXN0b3J5IjpbLTY0MTM0MzgzMSwtMjExNDM4ODU5Myw3NT
 M3OTUxNzksNDQ5MTY5OTksLTYyMDc2OTEyMiwtMTExNzY0MTI5
 MSwxNjUxODI4NDY1LC0xNDIwNDkwNjY1LC0zOTIyOTcxOSwtNj
 AxMTYyOTgzLDcwOTk4MTY2OCwtMTkyNjU4MDIwNCw1MzIzMjAw
