books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md updated from https://stackedit.io/

--- a/books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md
+++ b/books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md
@@ -79,29 +79,24 @@ WAR 파일의 가장 중요한 점은 배포 명세서(web.xml)이 있다는 것
 
 톰캣은 한번에 여러 개의 웹어플애플리케이션을 실행할 수 있도록 설계되었다. 웹 애플리케이션은 배포명세서를 가진 WAR파일로 정정의가 된다. 대개 서버는 하나의 톰캣 인스턴스를 실행한다. WAR 파일이 톰캣 인스턴스의 webapps 디렉터리에 설치된다. 
 
-> 톰캣의 구성 요소(component) 
-
-톰캣은 몇 가지 구성요소로 이루어져 있는데, 대표적으로 카타리나와 재스퍼가 있다. 톰캣의 핵심 컴포넌트는 카타리나이고 이것이 바로 톰캣의 서블릿 명세의 실제 구현이다. 즉 톰캣을 돌린다는건 카타리나를 돌리는 것이다. 
-
-
-
-
+톰캣의 구성 요소(component) 
+: 톰캣은 몇 가지 구성요소로 이루어져 있는데, 대표적으로 카타리나와 재스퍼가 있다. 톰캣의 핵심 컴포넌트는 카타리나이고 이것이 바로 톰캣의 서블릿 명세의 실제 구현이다. 즉 톰캣을 돌린다는건 카타리나를 돌리는 것이다. [About Catalina](https://www.mulesoft.com/tcat/tomcat-catalina)
 
 
 실행 중인 톰캣 인스턴스는 webapps 디렉터리에서 일어난 변화를 감지한다. 예를 들어 BookingApplication.war라는 WAR파일을 webapps 디렉터리에 배포하면 자동으로 BookingApplication 디렉터리에 압축을 푼다. 그리고 WEB-INF 하위에 있는 web.xml 파일 읽고 정의대로 애플리케이션을 실행한다.  
 
-
+> 서블릿 API에서 요청 매개변수들을 어떠헥  
 
 
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjA5NTY5MDkwNywtMjExNDM4ODU5Myw3NT
-M3OTUxNzksNDQ5MTY5OTksLTYyMDc2OTEyMiwtMTExNzY0MTI5
-MSwxNjUxODI4NDY1LC0xNDIwNDkwNjY1LC0zOTIyOTcxOSwtNj
-AxMTYyOTgzLDcwOTk4MTY2OCwtMTkyNjU4MDIwNCw1MzIzMjAw
-OTYsMTc1Mzc0ODgxMiw2NDQ1MTQ0NTcsMTMwMTUyMjYxNSwtMT
-UwNjgzMDY5OCwtMTMxNjI5MTI1LC04NTAzNjM2NzksLTExNjAw
-MzgzNTNdfQ==
+eyJoaXN0b3J5IjpbNDM1MzEzOTE1LC0yMTE0Mzg4NTkzLDc1Mz
+c5NTE3OSw0NDkxNjk5OSwtNjIwNzY5MTIyLC0xMTE3NjQxMjkx
+LDE2NTE4Mjg0NjUsLTE0MjA0OTA2NjUsLTM5MjI5NzE5LC02MD
+ExNjI5ODMsNzA5OTgxNjY4LC0xOTI2NTgwMjA0LDUzMjMyMDA5
+NiwxNzUzNzQ4ODEyLDY0NDUxNDQ1NywxMzAxNTIyNjE1LC0xNT
+A2ODMwNjk4LC0xMzE2MjkxMjUsLTg1MDM2MzY3OSwtMTE2MDAz
+ODM1M119
 -->
