--- a/books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md
+++ b/books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md
@@ -85,18 +85,20 @@ WAR 파일의 가장 중요한 점은 배포 명세서(web.xml)이 있다는 것
 
 실행 중인 톰캣 인스턴스는 webapps 디렉터리에서 일어난 변화를 감지한다. 예를 들어 BookingApplication.war라는 WAR파일을 webapps 디렉터리에 배포하면 자동으로 BookingApplication 디렉터리에 압축을 푼다. 그리고 WEB-INF 하위에 있는 web.xml 파일 읽고 정의대로 애플리케이션을 실행한다.  
 
-> 서블릿 API에서 요청 매개변수들을 어떠헥  
+> 서블릿 API에서 요청 매개변수들을 어떻게 처리하는가?
+
+HttpServeletRequest 클래스는 getParameterMap 메서드가 있다. 맵의 타입은 Map<String, String[]>이다. 즉 맵의 각 키는 해당 키와 함께 요청의  
 
 
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNDM1MzEzOTE1LC0yMTE0Mzg4NTkzLDc1Mz
-c5NTE3OSw0NDkxNjk5OSwtNjIwNzY5MTIyLC0xMTE3NjQxMjkx
-LDE2NTE4Mjg0NjUsLTE0MjA0OTA2NjUsLTM5MjI5NzE5LC02MD
-ExNjI5ODMsNzA5OTgxNjY4LC0xOTI2NTgwMjA0LDUzMjMyMDA5
-NiwxNzUzNzQ4ODEyLDY0NDUxNDQ1NywxMzAxNTIyNjE1LC0xNT
-A2ODMwNjk4LC0xMzE2MjkxMjUsLTg1MDM2MzY3OSwtMTE2MDAz
-ODM1M119
+eyJoaXN0b3J5IjpbLTEzMzI5MzM3MTUsLTIxMTQzODg1OTMsNz
+UzNzk1MTc5LDQ0OTE2OTk5LC02MjA3NjkxMjIsLTExMTc2NDEy
+OTEsMTY1MTgyODQ2NSwtMTQyMDQ5MDY2NSwtMzkyMjk3MTksLT
+YwMTE2Mjk4Myw3MDk5ODE2NjgsLTE5MjY1ODAyMDQsNTMyMzIw
+MDk2LDE3NTM3NDg4MTIsNjQ0NTE0NDU3LDEzMDE1MjI2MTUsLT
+E1MDY4MzA2OTgsLTEzMTYyOTEyNSwtODUwMzYzNjc5LC0xMTYw
+MDM4MzUzXX0=
 -->
