--- a/books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md
+++ b/books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md
@@ -87,18 +87,18 @@ WAR 파일의 가장 중요한 점은 배포 명세서(web.xml)이 있다는 것
 
 > 서블릿 API에서 요청 매개변수들을 어떻게 처리하는가?
 
-HttpServeletRequest 클래스는 getParameterMap 메서드가 있다. 맵의 타입은 Map<String, String[]>이다. 즉 맵의 각 키는 해당 키와 함께 요청의  
+HttpServeletRequest 클래스는 getParameterMap 메서드가 있다. 맵의 타입은 Map<String, String[]>이다. String[] 타입이 값에 해당하는 것이 다소 신기할 수 있는데 예를 들어 이해하면 좋다.
 
 
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEzMzI5MzM3MTUsLTIxMTQzODg1OTMsNz
-UzNzk1MTc5LDQ0OTE2OTk5LC02MjA3NjkxMjIsLTExMTc2NDEy
-OTEsMTY1MTgyODQ2NSwtMTQyMDQ5MDY2NSwtMzkyMjk3MTksLT
-YwMTE2Mjk4Myw3MDk5ODE2NjgsLTE5MjY1ODAyMDQsNTMyMzIw
-MDk2LDE3NTM3NDg4MTIsNjQ0NTE0NDU3LDEzMDE1MjI2MTUsLT
-E1MDY4MzA2OTgsLTEzMTYyOTEyNSwtODUwMzYzNjc5LC0xMTYw
-MDM4MzUzXX0=
+eyJoaXN0b3J5IjpbLTY3NTE1MzM3NywtMjExNDM4ODU5Myw3NT
+M3OTUxNzksNDQ5MTY5OTksLTYyMDc2OTEyMiwtMTExNzY0MTI5
+MSwxNjUxODI4NDY1LC0xNDIwNDkwNjY1LC0zOTIyOTcxOSwtNj
+AxMTYyOTgzLDcwOTk4MTY2OCwtMTkyNjU4MDIwNCw1MzIzMjAw
+OTYsMTc1Mzc0ODgxMiw2NDQ1MTQ0NTcsMTMwMTUyMjYxNSwtMT
+UwNjgzMDY5OCwtMTMxNjI5MTI1LC04NTAzNjM2NzksLTExNjAw
+MzgzNTNdfQ==
 -->
