books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md updated from https://stackedit.io/

--- a/books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md
+++ b/books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md
@@ -87,18 +87,20 @@ WAR 파일의 가장 중요한 점은 배포 명세서(web.xml)이 있다는 것
 
 > 서블릿 API에서 요청 매개변수들을 어떻게 처리하는가?
 
-HttpServeletRequest 클래스는 getParameterMap 메서드가 있다. 맵의 타입은 Map<String, String[]>이다. String[] 타입이 값에 해당하는 것이 다소 신기할 수 있는데 예를 들어 이해하면 좋다.
+HttpServeletRequest 클래스는 getParameterMap 메서드가 있다. 맵의 타입은 Map<String, String[]>이다. String[] 타입이 값에 해당하는 것이 다소 신기할 수 있는데 예를 들어 이해하면 좋다. 
+
+쿼리 문자열 `?a=123&b=abc&a=456`을 요청으로 보내면 request의 getParameterMap에는 a: {123,456
 
 
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTY3NTE1MzM3NywtMjExNDM4ODU5Myw3NT
-M3OTUxNzksNDQ5MTY5OTksLTYyMDc2OTEyMiwtMTExNzY0MTI5
-MSwxNjUxODI4NDY1LC0xNDIwNDkwNjY1LC0zOTIyOTcxOSwtNj
-AxMTYyOTgzLDcwOTk4MTY2OCwtMTkyNjU4MDIwNCw1MzIzMjAw
-OTYsMTc1Mzc0ODgxMiw2NDQ1MTQ0NTcsMTMwMTUyMjYxNSwtMT
-UwNjgzMDY5OCwtMTMxNjI5MTI1LC04NTAzNjM2NzksLTExNjAw
-MzgzNTNdfQ==
+eyJoaXN0b3J5IjpbMTc2MzQ5ODcwMiwtNjc1MTUzMzc3LC0yMT
+E0Mzg4NTkzLDc1Mzc5NTE3OSw0NDkxNjk5OSwtNjIwNzY5MTIy
+LC0xMTE3NjQxMjkxLDE2NTE4Mjg0NjUsLTE0MjA0OTA2NjUsLT
+M5MjI5NzE5LC02MDExNjI5ODMsNzA5OTgxNjY4LC0xOTI2NTgw
+MjA0LDUzMjMyMDA5NiwxNzUzNzQ4ODEyLDY0NDUxNDQ1NywxMz
+AxNTIyNjE1LC0xNTA2ODMwNjk4LC0xMzE2MjkxMjUsLTg1MDM2
+MzY3OV19
 -->
