--- a/books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md
+++ b/books/Programming Interview/Java/CH13 웹 애플리케이션 만들.md
@@ -89,14 +89,14 @@ WAR 파일의 가장 중요한 점은 배포 명세서(web.xml)이 있다는 것
 
 HttpServeletRequest 클래스는 getParameterMap 메서드가 있다. 맵의 타입은 Map<String, String[]>이다. String[] 타입이 값에 해당하는 것이 다소 신기할 수 있는데 예를 들어 이해하면 좋다. 
 
-쿼리 문자열 `?a=123&b=abc&a=456`을 요청으로 보내면 request의 getParameterMap에는 a: {123,456
+쿼리 문자열 `?a=123&b=abc&a=456`을 요청으로 보내면 request의 getParameterMap에는 a: {123,456}, b: {abc} 가 적재 된다. 즉 쿼리 문자열의 키와 값으로 request의 parameterMap을 만든다. 
 
 
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTc2MzQ5ODcwMiwtNjc1MTUzMzc3LC0yMT
+eyJoaXN0b3J5IjpbMTIyMjkzMDY0OSwtNjc1MTUzMzc3LC0yMT
 E0Mzg4NTkzLDc1Mzc5NTE3OSw0NDkxNjk5OSwtNjIwNzY5MTIy
 LC0xMTE3NjQxMjkxLDE2NTE4Mjg0NjUsLTE0MjA0OTA2NjUsLT
 M5MjI5NzE5LC02MDExNjI5ODMsNzA5OTgxNjY4LC0xOTI2NTgw
