--- a/books/Programming Interview/Java/CH15 직렬화.md
+++ b/books/Programming Interview/Java/CH15 직렬화.md
@@ -1,9 +1,9 @@
 # 직렬화(Serialization)
 
-
+네트워크상에서 데이터를 어떻게 주고 무엇이 전송되는지는 다양한 방법이 있다. 그 중 객체 직렬화(serialization)은 JVM에서 자바
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE5NjIxOTU4MjldfQ==
+eyJoaXN0b3J5IjpbMjA3MDkzMzczLC0xOTYyMTk1ODI5XX0=
 -->
