--- a/books/Programming Interview/Java/CH15 직렬화.md
+++ b/books/Programming Interview/Java/CH15 직렬화.md
@@ -3,10 +3,15 @@
 네트워크상에서 데이터를 어떻게 주고 무엇이 전송되는지는 다양한 방법이 있다. 그 중 객체 직렬화(serialization)은 **JVM에서 자바 객체를 보내는 간단한 방법이다.** 
 
 ```
-public class Pari implements Serializale
+public class Pair implements Serializable
 ```
+직렬화를 하려면 Pair 클래스가 Serializable 인터페이스를 구현해야 한다는 것이다. Serializable는 JVM에게 이 클래스가 직렬화 될 수 있다는 알려주는 표시자 인터페이스이다. 
+
+>transient
+>데이터를  직렬화할때 하고 싶지 않은 필드가 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTI4MzgzNCwtMTk2MjE5NTgyOV19
+eyJoaXN0b3J5IjpbLTE1NTMyNjI2MjcsLTE5NjIxOTU4MjldfQ
+==
 -->
