books/Programming Interview/Java/CH15 직렬화.md updated from https://stackedit.io/

--- a/books/Programming Interview/Java/CH15 직렬화.md
+++ b/books/Programming Interview/Java/CH15 직렬화.md
@@ -8,10 +8,11 @@ public class Pair implements Serializable
 직렬화를 하려면 Pair 클래스가 Serializable 인터페이스를 구현해야 한다는 것이다. Serializable는 JVM에게 이 클래스가 직렬화 될 수 있다는 알려주는 표시자 인터페이스이다. 
 
 >transient
->데이터를  직렬화할때 하고 싶지 않은 필드가 
+>데이터를  직렬화할때 하고 싶지 않은 필드가 직렬화 객체 안에 있으면 필드에 선언할 수 있다. transient가 적용된 필드는 역직렬화 할때 null을 반환한다 
+
+
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE1NTMyNjI2MjcsLTE5NjIxOTU4MjldfQ
-==
+eyJoaXN0b3J5IjpbMTM5MTM1ODkzMCwtMTk2MjE5NTgyOV19
 -->
