--- a/books/Programming Interview/Java/CH15 직렬화.md
+++ b/books/Programming Interview/Java/CH15 직렬화.md
@@ -8,14 +8,12 @@ public class Pair implements Serializable
 ```
 직렬화를 하려면 Pair 클래스가 Serializable 인터페이스를 구현해야 한다는 것이다. Serializable는 JVM에게 이 클래스가 직렬화 될 수 있다는 알려주는 표시자 인터페이스이다. 
 
-**Points to remember**  
+주의할 점
 1. If a parent class has implemented Serializable interface then child class doesn’t need to implement it but vice-versa is not true.  
 2. Only non-static data members are saved via Serialization process.  
-3. Static data members and transient data members are not saved via Serialization process.So, if you don’t want to save value of a non-static data member then make it transient.  
+3. Static data members and transient data members are not saved via Serialization process. So, if you don’t want to save value of a non-static data member then make it transient.  
 4. Constructor of object is never called when an object is deserialized.  
 5. Associated objects must be implementing Serializable interface.
-
-
 
 transient
 : 데이터를  직렬화할때 하고 싶지 않은 필드가 직렬화 객체 안에 있으면 필드에 선언할 수 있다. transient가 적용된 필드는 역직렬화 할때 null을 반환한다 
@@ -24,6 +22,6 @@ transient
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEzNTk3NDc1NDksMTM5MTM1ODkzMCwtMT
-k2MjE5NTgyOV19
+eyJoaXN0b3J5IjpbMTYxNDMwMTMxNiwxMzkxMzU4OTMwLC0xOT
+YyMTk1ODI5XX0=
 -->
