books/Programming Interview/Java/CH15 직렬화.md updated from https://stackedit.io/

--- a/books/Programming Interview/Java/CH15 직렬화.md
+++ b/books/Programming Interview/Java/CH15 직렬화.md
@@ -1,7 +1,10 @@
 # [직렬화(Serialization)](https://www.geeksforgeeks.org/serialization-in-java/)
 
 
-네트워크상에서 데이터를 어떻게 주고 무엇이 전송되는지는 다양한 방법이 있다. 그 중 객체 직렬화(serialization)은 **JVM에서 자바 객체를 보내는 간단한 방법이다.** 
+네트워크상에서 데이터를 어떻게 주고 무엇이 전송되는지는 다양한 방법이 있다. 사실 직렬화는 한 객체의 상태를 byte stream으로 바꾸는 매커니즘을 말한다. 역직렬화는 Deserialization is the reverse process where the byte stream is used to recreate the actual Java object in memory.
+
+
+그 중 객체 직렬화(serialization)은 **JVM에서 자바 객체를 보내는 간단한 방법이다.** 
 
 ```
 public class Pair implements Serializable
@@ -19,9 +22,18 @@ transient
 : 데이터를  직렬화할때 하고 싶지 않은 필드가 직렬화 객체 안에 있으면 필드에 선언할 수 있다. transient가 적용된 필드는 역직렬화 할때 null을 반환한다 
 
 
+**SerialVersionUID**  
+The Serialization runtime associates a version number with each Serializable class called a SerialVersionUID, which is used during Deserialization to verify that sender and reciever of a serialized object have loaded classes for that object which are compatible with respect to serialization. If the reciever has loaded a class for the object that has different UID than that of corresponding sender’s class, the Deserialization will result in an  **InvalidClassException**. A Serializable class can declare its own UID explicitly by declaring a field name.  
+It must be static, final and of type long.  
+i.e- ANY-ACCESS-MODIFIER static final long serialVersionUID=42L;
+
+If a serializable class doesn’t explicitly declare a serialVersionUID, then the serialization runtime will calculate a default one for that class based on various aspects of class, as described in Java Object Serialization Specification. However it is strongly recommended that all serializable classes explicitly declare serialVersionUID value, since its computation is highly sensitive to class details that may vary depending on compiler implementations, any change in class or using different id may affect the serialized data.
+
+It is also recommended to use private modifier for UID since it is not useful as inherited member.
+
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTYxNDMwMTMxNiwxMzkxMzU4OTMwLC0xOT
+eyJoaXN0b3J5IjpbLTMwOTk3NDE4NiwxMzkxMzU4OTMwLC0xOT
 YyMTk1ODI5XX0=
 -->
