books/Programming Interview/Java/CH15 직렬화.md updated from https://stackedit.io/

--- a/books/Programming Interview/Java/CH15 직렬화.md
+++ b/books/Programming Interview/Java/CH15 직렬화.md
@@ -1,10 +1,8 @@
 # [직렬화(Serialization)](https://www.geeksforgeeks.org/serialization-in-java/)
 
 
-네트워크상에서 데이터를 어떻게 주고 무엇이 전송되는지는 다양한 방법이 있다. 사실 직렬화는 한 객체의 상태를 byte stream으로 바꾸는 매커니즘을 말한다. 역직렬화는 Deserialization is the reverse process where the byte stream is used to recreate the actual Java object in memory.
-
-
-그 중 객체 직렬화(serialization)은 **JVM에서 자바 객체를 보내는 간단한 방법이다.** 
+네트워크상에서 데이터를 어떻게 주고 무엇이 전송되는지는 다양한 방법이 있다. 사실 직렬화는 한 객체의 상태를 byte stream으로 바꾸는 매커니즘을 말한다. 역직렬화는 메모리의 byte stream에서 실제 객체를 재생성하는데 사용되는 프로세스를 말한다.  
+자바의 직렬화는 **JVM에서 자바 객체를 보내는 간단한 방법이다.** 
 
 ```
 public class Pair implements Serializable
@@ -34,6 +32,6 @@ It is also recommended to use private modifier for UID since it is not useful as
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTMwOTk3NDE4NiwxMzkxMzU4OTMwLC0xOT
-YyMTk1ODI5XX0=
+eyJoaXN0b3J5IjpbLTIwNjc1NTkwOTcsMTM5MTM1ODkzMCwtMT
+k2MjE5NTgyOV19
 -->
