books/Programming Interview/Java/CH15 직렬화.md updated from https://stackedit.io/

--- a/books/Programming Interview/Java/CH15 직렬화.md
+++ b/books/Programming Interview/Java/CH15 직렬화.md
@@ -19,7 +19,7 @@ transient
 : 데이터를  직렬화할때 하고 싶지 않은 필드가 직렬화 객체 안에 있으면 필드에 선언할 수 있다. transient가 적용된 필드는 역직렬화 할때 null을 반환한다 
 
 SerialVersionUID
-: 직렬화를 할때는 SerialVersionUID라는 각 직렬화 클래스와 상호작용하는 버전 넘버가 있다. 이것은 나중에 역직렬화를 할때 보낸 ㅈ
+: 직렬화를 할때는 SerialVersionUID라는 각 직렬화 클래스와 상호작용하는 버전 넘버가 있다. 이것은 나중에 역직렬화를 할때 보낸 (직렬화된) 객체와 받은 (직렬화된) 객체가 부합하는지 검증하는데 사용된다.  만약 수
 
 : The Serialization runtime associates a version number with each Serializable class called a SerialVersionUID, which is used during Deserialization to verify that sender and reciever of a serialized object have loaded classes for that object which are compatible with respect to serialization.
 
@@ -35,6 +35,6 @@ It is also recommended to use private modifier for UID since it is not useful as
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEyNTI3MzU4NSwxMzkxMzU4OTMwLC0xOT
-YyMTk1ODI5XX0=
+eyJoaXN0b3J5IjpbNDUwMDk3MTg0LDEzOTEzNTg5MzAsLTE5Nj
+IxOTU4MjldfQ==
 -->
