--- a/books/Programming Interview/Java/CH15 직렬화.md
+++ b/books/Programming Interview/Java/CH15 직렬화.md
@@ -20,11 +20,9 @@ transient
 
 SerialVersionUID
 : 직렬화를 할때는 SerialVersionUID라는 각 직렬화 클래스와 상호작용하는 버전 넘버가 있다. 이것은 나중에 역직렬화를 할때 보낸 (직렬화된) 객체와 받은 (직렬화된) 객체가 부합하는지 검증하는데 사용된다.  만약 받은쪽에서 역직렬화를 할때 UID값이 다르다면, InvalidClassException을 던진다.
-직렬화가 가능한 클래스는 클래스의 
+직렬화가 가능한 클래스는 클래스 고유의 UID를 필드에 선언이 가능한데, 반드시 정적이고 final 키워드를 붙이고 long 타입이어야 한다. 
+UID를  명시하지 않아도 직렬화시 자동으로 환경에 따라
 
-A Serializable class can declare its own UID explicitly by declaring a field name.  
-It must be static, final and of type long.  
-i.e- ANY-ACCESS-MODIFIER static final long serialVersionUID=42L;
 
 If a serializable class doesn’t explicitly declare a serialVersionUID, then the serialization runtime will calculate a default one for that class based on various aspects of class, as described in Java Object Serialization Specification. However it is strongly recommended that all serializable classes explicitly declare serialVersionUID value, since its computation is highly sensitive to class details that may vary depending on compiler implementations, any change in class or using different id may affect the serialized data.
 
@@ -33,6 +31,6 @@ It is also recommended to use private modifier for UID since it is not useful as
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEzNTAzNTU0ODMsMTM5MTM1ODkzMCwtMT
-k2MjE5NTgyOV19
+eyJoaXN0b3J5IjpbMTAxMDQ0NjI3NCwxMzkxMzU4OTMwLC0xOT
+YyMTk1ODI5XX0=
 -->
