books/Programming Interview/Java/CH16 스프링 프레임워.md updated from https://stackedit.io/

--- a/books/Programming Interview/Java/CH16 스프링 프레임워.md
+++ b/books/Programming Interview/Java/CH16 스프링 프레임워.md
@@ -1,10 +1,12 @@
 # 스프링 프레임워크
 
 
-## ㅅ
+## 스프링 코어(DI, AOP)
+
+스프링 코어 중에서 가장 중요한 것은 DI(dependency injection)과 AOP(ㅁ
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNjU0ODM2OTYxLC0xNDQ0Njc4NjMyXX0=
+eyJoaXN0b3J5IjpbLTg3MjQ0Mzk1NywtMTQ0NDY3ODYzMl19
 -->
