books/Programming Interview/Java/CH16 스프링 프레임워.md updated from https://stackedit.io/

--- a/books/Programming Interview/Java/CH16 스프링 프레임워.md
+++ b/books/Programming Interview/Java/CH16 스프링 프레임워.md
@@ -5,10 +5,12 @@
 
 스프링 코어 중에서 가장 중요한 것은 DI(dependency injection)과 AOP(aspect oriented programming)이다.
 
-DI의 경우, 하나의 애플리케이션을 동작하기 위해 여러개의 컴포너느를 통합해서 사용한다. 이때 의존성 주입이라는 접근방식이 큰힘을 발휘한다. 
+DI의 경우, 하나의 애플리케이션을 동작하기 위해 여러개의 컴포너느를 통합해서 사용한다. 이때 의존성 주입이라는 접근방식이 큰 힘을 발휘한다. 
+
+일반적으로 특정 컴포넌트를 사용할때 
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEwNjE0MTY4MCwtMTQ0NDY3ODYzMl19
+eyJoaXN0b3J5IjpbMjg5Njk3OTc0LC0xNDQ0Njc4NjMyXX0=
 -->
