--- a/books/Programming Interview/Java/CH16 스프링 프레임워.md
+++ b/books/Programming Interview/Java/CH16 스프링 프레임워.md
@@ -7,10 +7,12 @@
 
 DI의 경우, 하나의 애플리케이션을 동작하기 위해 여러개의 컴포너느를 통합해서 사용한다. 이때 의존성 주입이라는 접근방식이 큰 힘을 발휘한다. 
 
-일반적으로 특정 컴포넌트를 사용할때 
+일반적으로 특정 컴포넌트를 사용할때 한 클래스에서 구현 클래스를 직접 생성해서 할당하면 두 클래스간의 결합도가 높아진다. 
+
+많은 컴포넌트에 의존해야 하는 클래스가 이같은 방식으로 개발하는 건 큰 문제가 생길 수 있다. 이 결합도를 낮추는 바
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjg5Njk3OTc0LC0xNDQ0Njc4NjMyXX0=
+eyJoaXN0b3J5IjpbNzU4Mjc1NzA3LC0xNDQ0Njc4NjMyXX0=
 -->
