--- a/books/Programming Interview/Java/CH16 스프링 프레임워.md
+++ b/books/Programming Interview/Java/CH16 스프링 프레임워.md
@@ -21,7 +21,7 @@ UserService service = context.getBean(UserService.class);
 
 ### DI 개요
 
-DI는 의존섭 주인, 
+DI는 의존섭 주인, Ioc(Inverse of Control)이라 하는 디자인 패턴 중에 하나다.  Ioc는 인스턴스를 제어하는 주도권이 역전된다는 의미인데 컴포넌트를 구성하는 인스턴스의 생성과 의존관계를 해당 소크가 아닌 DI 컨테이너가 대신해주기 때문이다. 
 
 
 
@@ -29,6 +29,6 @@ DI는 의존섭 주인,
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTA4OTgyNDU1NywtMzgxNjM3MTcsLTE0ND
+eyJoaXN0b3J5IjpbLTM5MjI3MzczOSwtMzgxNjM3MTcsLTE0ND
 Q2Nzg2MzJdfQ==
 -->
