books/Programming Interview/Java/CH16 스프링 프레임워.md updated from https://stackedit.io/

--- a/books/Programming Interview/Java/CH16 스프링 프레임워.md
+++ b/books/Programming Interview/Java/CH16 스프링 프레임워.md
@@ -23,12 +23,18 @@ UserService service = context.getBean(UserService.class);
 
 DI는 의존섭 주인, Ioc(Inverse of Control)이라 하는 디자인 패턴 중에 하나다.  Ioc는 인스턴스를 제어하는 주도권이 역전된다는 의미인데 컴포넌트를 구성하는 인스턴스의 생성과 의존관계를 해당 소크가 아닌 DI 컨테이너가 대신해주기 때문이다. 
 
+DI 컨테이너에서 인스턴스를 관리하는 방식으로 하면 아래와 같은 장점이 있다. 
+* 인스턴스의 스코프를 관리할 수 있다.
+* 인스턴스의 생명 주기를 제어할 수 있다. 
+* AOP 방식으로 공통 기능을 집어 넣을 수 있다.
+* 의존하는 컴포넌트 간의 결합도를 낮추어 단위 테스트하기가 쉬워진다. 
+
 
 
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTM5MjI3MzczOSwtMzgxNjM3MTcsLTE0ND
-Q2Nzg2MzJdfQ==
+eyJoaXN0b3J5IjpbLTExNDYyMTE3NDIsLTM5MjI3MzczOSwtMz
+gxNjM3MTcsLTE0NDQ2Nzg2MzJdfQ==
 -->
