--- a/books/Programming Interview/Java/CH16 스프링 프레임워.md
+++ b/books/Programming Interview/Java/CH16 스프링 프레임워.md
@@ -29,12 +29,14 @@ DI 컨테이너에서 인스턴스를 관리하는 방식으로 하면 아래와
 * AOP 방식으로 공통 기능을 집어 넣을 수 있다.
 * 의존하는 컴포넌트 간의 결합도를 낮추어 단위 테스트하기가 쉬워진다. 
 
+### ApplicationContext와 Bean 정의
+
 
 
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTExNDYyMTE3NDIsLTM5MjI3MzczOSwtMz
-gxNjM3MTcsLTE0NDQ2Nzg2MzJdfQ==
+eyJoaXN0b3J5IjpbMjE0MTgzNDg4MywtMzkyMjczNzM5LC0zOD
+E2MzcxNywtMTQ0NDY3ODYzMl19
 -->
