--- a/books/Programming Interview/Java/CH16 스프링 프레임워.md
+++ b/books/Programming Interview/Java/CH16 스프링 프레임워.md
@@ -31,12 +31,14 @@ DI 컨테이너에서 인스턴스를 관리하는 방식으로 하면 아래와
 
 ### ApplicationContext와 Bean 정의
 
+스프ㄹㄹ
+
 
 
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjE0MTgzNDg4MywtMzkyMjczNzM5LC0zOD
-E2MzcxNywtMTQ0NDY3ODYzMl19
+eyJoaXN0b3J5IjpbLTE5NzIxNTA2ODksMjE0MTgzNDg4MywtMz
+kyMjczNzM5LC0zODE2MzcxNywtMTQ0NDY3ODYzMl19
 -->
