--- a/books/Programming Interview/Java/CH16 스프링 프레임워.md
+++ b/books/Programming Interview/Java/CH16 스프링 프레임워.md
@@ -31,7 +31,7 @@ DI 컨테이너에서 인스턴스를 관리하는 방식으로 하면 아래와
 
 ### ApplicationContext와 Bean 정의
 
-스프ㄹㄹ
+스프링 프레임 워크에서는 ApplicationContext가 DI 컨테이너의 역할을 한다. ApplicationContext를 생성할때 설정 클래스(configuration class)를 전달받
 
 
 
@@ -39,6 +39,6 @@ DI 컨테이너에서 인스턴스를 관리하는 방식으로 하면 아래와
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE5NzIxNTA2ODksMjE0MTgzNDg4MywtMz
-kyMjczNzM5LC0zODE2MzcxNywtMTQ0NDY3ODYzMl19
+eyJoaXN0b3J5IjpbMTUyMTYzMjc1NSwyMTQxODM0ODgzLC0zOT
+IyNzM3MzksLTM4MTYzNzE3LC0xNDQ0Njc4NjMyXX0=
 -->
