books/Programming Interview/Java/CH16 스프링 프레임워.md updated from https://stackedit.io/

--- a/books/Programming Interview/Java/CH16 스프링 프레임워.md
+++ b/books/Programming Interview/Java/CH16 스프링 프레임워.md
@@ -31,7 +31,15 @@ DI 컨테이너에서 인스턴스를 관리하는 방식으로 하면 아래와
 
 ### ApplicationContext와 Bean 정의
 
-스프링 프레임 워크에서는 ApplicationContext가 DI 컨테이너의 역할을 한다. ApplicationContext를 생성할때 설정 클래스(configuration class)를 전달받
+스프링 프레임 워크에서는 ApplicationContext가 DI 컨테이너의 역할을 한다. ApplicationContext를 생성할때 설정 클래스(configuration class)를 전달받아 생성한다. 이러한 설정 클래스를  자바 코드로 구현하는걸 자바 기반 설정 방식이라 한다. 
+
+```
+@Configuration
+public class AppConfig {
+	@Bean
+}
+
+```
 
 
 
@@ -39,6 +47,6 @@ DI 컨테이너에서 인스턴스를 관리하는 방식으로 하면 아래와
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTUyMTYzMjc1NSwyMTQxODM0ODgzLC0zOT
-IyNzM3MzksLTM4MTYzNzE3LC0xNDQ0Njc4NjMyXX0=
+eyJoaXN0b3J5IjpbLTE5MjgwNzMxMTMsMjE0MTgzNDg4MywtMz
+kyMjczNzM5LC0zODE2MzcxNywtMTQ0NDY3ODYzMl19
 -->
