--- a/books/Programming Interview/Java/CH16 스프링 프레임워.md
+++ b/books/Programming Interview/Java/CH16 스프링 프레임워.md
@@ -37,9 +37,15 @@ DI 컨테이너에서 인스턴스를 관리하는 방식으로 하면 아래와
 @Configuration
 public class AppConfig {
 	@Bean
+	UserRepository userRepository(){
+		return new UserRepositoryImpl();
+	}
 }
-
 ```
+
+@Configuration과 @Bean 애너테이션을 사용해서 DI 컨테이너에 컴포넌트를 등록하면 애플리케이션은 DI 컨테이너에 있는 Bean을 DI 컨테이너로 부터 가져 올 수 있다. 
+
+스프링 플
 
 
 
@@ -47,6 +53,6 @@ public class AppConfig {
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE5MjgwNzMxMTMsMjE0MTgzNDg4MywtMz
-kyMjczNzM5LC0zODE2MzcxNywtMTQ0NDY3ODYzMl19
+eyJoaXN0b3J5IjpbMzY0MjE0NTYyLDIxNDE4MzQ4ODMsLTM5Mj
+I3MzczOSwtMzgxNjM3MTcsLTE0NDQ2Nzg2MzJdfQ==
 -->
