--- a/books/Programming Interview/Java/CH16 스프링 프레임워.md
+++ b/books/Programming Interview/Java/CH16 스프링 프레임워.md
@@ -45,7 +45,7 @@ public class AppConfig {
 
 @Configuration과 @Bean 애너테이션을 사용해서 DI 컨테이너에 컴포넌트를 등록하면 애플리케이션은 DI 컨테이너에 있는 Bean을 DI 컨테이너로 부터 가져 올 수 있다. 
 
-스프링 플
+스프링 프레임워크에서는 DI 컨테이너에 등록하는 컴포넌트를 Bean이라고 하고, 이 빈에 대한 설정 정보를 빈 정의(Bean Definition). 도한 DI 컨테이너에서 빈을 찾아오는 행위를 룩업(look up)이라고 한다. 
 
 
 
@@ -53,6 +53,6 @@ public class AppConfig {
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMzY0MjE0NTYyLDIxNDE4MzQ4ODMsLTM5Mj
+eyJoaXN0b3J5IjpbMjI1MjAxMTAxLDIxNDE4MzQ4ODMsLTM5Mj
 I3MzczOSwtMzgxNjM3MTcsLTE0NDQ2Nzg2MzJdfQ==
 -->
