--- a/books/Programming Interview/Java/CH16 스프링 프레임워.md
+++ b/books/Programming Interview/Java/CH16 스프링 프레임워.md
@@ -47,12 +47,14 @@ public class AppConfig {
 
 스프링 프레임워크에서는 DI 컨테이너에 등록하는 컴포넌트를 Bean이라고 하고, 이 빈에 대한 설정 정보를 빈 정의(Bean Definition). 도한 DI 컨테이너에서 빈을 찾아오는 행위를 룩업(look up)이라고 한다. 
 
+룩업을 하는 방법에는 몇 가지 유형이 있다. 
+
 
 
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjI1MjAxMTAxLDIxNDE4MzQ4ODMsLTM5Mj
-I3MzczOSwtMzgxNjM3MTcsLTE0NDQ2Nzg2MzJdfQ==
+eyJoaXN0b3J5IjpbMjA2NjEyMzY3NywyMTQxODM0ODgzLC0zOT
+IyNzM3MzksLTM4MTYzNzE3LC0xNDQ0Njc4NjMyXX0=
 -->
