--- a/books/Programming Interview/Java/CH16 스프링 프레임워.md
+++ b/books/Programming Interview/Java/CH16 스프링 프레임워.md
@@ -49,6 +49,10 @@ public class AppConfig {
 
 룩업을 하는 방법에는 몇 가지 유형이 있다. 
 ```
+UserService userService = context.getBean(UserService.class);
+UserService userService = context.getBean("userService",UserService.class);
+UserService userService = (UserService) context.getBean("userService");
+```
 
 
 
@@ -60,7 +64,7 @@ public class AppConfig {
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTU2MDM5MzI3NSwyMDY2MTIzNjc3LDIxND
-E4MzQ4ODMsLTM5MjI3MzczOSwtMzgxNjM3MTcsLTE0NDQ2Nzg2
-MzJdfQ==
+eyJoaXN0b3J5IjpbMzMzODU3NjU4LDIwNjYxMjM2NzcsMjE0MT
+gzNDg4MywtMzkyMjczNzM5LC0zODE2MzcxNywtMTQ0NDY3ODYz
+Ml19
 -->
