books/Programming Interview/Java/CH16 스프링 프레임워.md updated from https://stackedit.io/

--- a/books/Programming Interview/Java/CH16 스프링 프레임워.md
+++ b/books/Programming Interview/Java/CH16 스프링 프레임워.md
@@ -55,7 +55,7 @@ UserService userService = (UserService) context.getBean("userService");
 ```
 1번 유형은 빈의 타입을 지정하는 방식으로 해당 타입의 객체가 DI 컨테이너에 하나만 있을때 사용한다. 
 2번 유형은 빈의 타입과 이름을 지정하는 방식이다. 지정한 타입 객체가 DI 컨테이너에 여러게 있을때 구분하기 위해 사용한다. 
-3번 유형은 빈의 이름을 지정하는 방식이다. 반환 값이 Object이기 때문에 형변환 해야 원하는 객체를 쓸 수
+3번 유형은 빈의 이름을 지정하는 방식이다. 반환 값이 Object이기 때문에 형변환 해야 원하는 객체를 쓸 수 있다. 
 
 
 
@@ -66,7 +66,7 @@ UserService userService = (UserService) context.getBean("userService");
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbOTIwMDU3MDYzLDIwNjYxMjM2NzcsMjE0MT
+eyJoaXN0b3J5IjpbLTIyNzY4NDU3LDIwNjYxMjM2NzcsMjE0MT
 gzNDg4MywtMzkyMjczNzM5LC0zODE2MzcxNywtMTQ0NDY3ODYz
 Ml19
 -->
