--- a/books/Programming Interview/Java/CH16 스프링 프레임워.md
+++ b/books/Programming Interview/Java/CH16 스프링 프레임워.md
@@ -57,6 +57,10 @@ UserService userService = (UserService) context.getBean("userService");
 2번 유형은 빈의 타입과 이름을 지정하는 방식이다. 지정한 타입 객체가 DI 컨테이너에 여러게 있을때 구분하기 위해 사용한다. 
 3번 유형은 빈의 이름을 지정하는 방식이다. 반환 값이 Object이기 때문에 형변환 해야 원하는 객체를 쓸 수 있다. 
 
+빈을 설정하는 방법
+|방법| 설명 |
+|--|--|
+|자바 기반 설정 방식(Java-based configuration  | 자바 클래스에 @Configuration  |
 
 
 
@@ -68,7 +72,7 @@ UserService userService = (UserService) context.getBean("userService");
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTg1MzY2NzMwOSwyMDY2MTIzNjc3LDIxND
-E4MzQ4ODMsLTM5MjI3MzczOSwtMzgxNjM3MTcsLTE0NDQ2Nzg2
-MzJdfQ==
+eyJoaXN0b3J5IjpbLTEzNDcyMTIzMDYsMjA2NjEyMzY3NywyMT
+QxODM0ODgzLC0zOTIyNzM3MzksLTM4MTYzNzE3LC0xNDQ0Njc4
+NjMyXX0=
 -->
