--- a/books/Programming Interview/Java/CH16 스프링 프레임워.md
+++ b/books/Programming Interview/Java/CH16 스프링 프레임워.md
@@ -60,7 +60,9 @@ UserService userService = (UserService) context.getBean("userService");
 빈을 설정하는 방법에도 몇가지 유형이 있다. 
 |방법| 설명 |
 |--|--|
-|자바 기반 설정 방식(Java-based configuration  | 자바 클래스에 @Configuration  |
+|자바 기반 설정 방식(Java-based configuration)  | 자바 클래스에 @Configuration 애너테이션을, 메서드에 @Bean 애노테이션을 사용해서 빈을 정의하는 방법이다.|
+|XML 기반 설정 방식(XML-based configuration  |XML 파일을 사용하는 방법으로 <be>|
+
 
 
 
@@ -72,7 +74,7 @@ UserService userService = (UserService) context.getBean("userService");
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE5NTM2ODg5MzgsMjA2NjEyMzY3NywyMT
-QxODM0ODgzLC0zOTIyNzM3MzksLTM4MTYzNzE3LC0xNDQ0Njc4
-NjMyXX0=
+eyJoaXN0b3J5IjpbLTEwNzk0Njc2NjEsLTE5NTM2ODg5MzgsMj
+A2NjEyMzY3NywyMTQxODM0ODgzLC0zOTIyNzM3MzksLTM4MTYz
+NzE3LC0xNDQ0Njc4NjMyXX0=
 -->
