--- a/books/Programming Interview/Java/CH16 스프링 프레임워.md
+++ b/books/Programming Interview/Java/CH16 스프링 프레임워.md
@@ -61,7 +61,9 @@ UserService userService = (UserService) context.getBean("userService");
 |방법| 설명 |
 |--|--|
 |자바 기반 설정 방식(Java-based configuration)  | 자바 클래스에 @Configuration 애너테이션을, 메서드에 @Bean 애노테이션을 사용해서 빈을 정의하는 방법이다.|
-|XML 기반 설정 방식(XML-based configuration  |XML 파일을 사용하는 방법으로 <be>|
+|XML 기반 설정 방식(XML-based configuration  |XML 파일을 사용하는 방법으로 <bean> 요소의 클래스 속성에 빈을 기술할 수 있다.|
+|애너테이션 기반 설정 방식(annotation-based configuration  |@Componet같은 마커 애너테이션ㅇ|
+
 
 
 
@@ -74,7 +76,7 @@ UserService userService = (UserService) context.getBean("userService");
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEwNzk0Njc2NjEsLTE5NTM2ODg5MzgsMj
+eyJoaXN0b3J5IjpbLTE5MTYzOTc3MDUsLTE5NTM2ODg5MzgsMj
 A2NjEyMzY3NywyMTQxODM0ODgzLC0zOTIyNzM3MzksLTM4MTYz
 NzE3LC0xNDQ0Njc4NjMyXX0=
 -->
