books/Programming Interview/Java/CH16 스프링 프레임워.md updated from https://stackedit.io/

--- a/books/Programming Interview/Java/CH16 스프링 프레임워.md
+++ b/books/Programming Interview/Java/CH16 스프링 프레임워.md
@@ -64,7 +64,8 @@ UserService userService = (UserService) context.getBean("userService");
 |XML 기반 설정 방식(XML-based configuration)  |XML 파일을 사용하는 방법으로 <bean> 요소의 클래스 속성에 빈을 기술할 수 있다.|
 |애너테이션 기반 설정 방식(annotation-based configuration) |@Componet같은 마커 애너테이션이 부여된 클래스를 탐색해서(Component Scan) DI 컨테이너에 빈을 자동으로 등록하는 방법이다. |
 
-
+애너테이션 기반 설정 방식
+이 방법은 DI 컨테이너에 관리할 
 
 
 
@@ -77,7 +78,7 @@ UserService userService = (UserService) context.getBean("userService");
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTMwMjk0MzM4LC0xOTUzNjg4OTM4LDIwNj
-YxMjM2NzcsMjE0MTgzNDg4MywtMzkyMjczNzM5LC0zODE2Mzcx
-NywtMTQ0NDY3ODYzMl19
+eyJoaXN0b3J5IjpbNTY1Nzk4MzQwLC0zMDI5NDMzOCwtMTk1Mz
+Y4ODkzOCwyMDY2MTIzNjc3LDIxNDE4MzQ4ODMsLTM5MjI3Mzcz
+OSwtMzgxNjM3MTcsLTE0NDQ2Nzg2MzJdfQ==
 -->
