books/Programming Interview/Java/CH16 스프링 프레임워.md updated from https://stackedit.io/

--- a/books/Programming Interview/Java/CH16 스프링 프레임워.md
+++ b/books/Programming Interview/Java/CH16 스프링 프레임워.md
@@ -65,7 +65,7 @@ UserService userService = (UserService) context.getBean("userService");
 |애너테이션 기반 설정 방식(annotation-based configuration) |@Componet같은 마커 애너테이션이 부여된 클래스를 탐색해서(Component Scan) DI 컨테이너에 빈을 자동으로 등록하는 방법이다. |
 
 애너테이션 기반 설정 방식
-이 방법은 DI 컨테이너에서 관리할 빈을 빈 설정파일(config.class)
+이 방법은 DI 컨테이너에서 관리할 빈 자체에 빈을 정의하는 애너테이션을 부여한다. 이 애너테이션이 붙은 클래스를 탐색해서 DI 컨테이너에 자동으로 등록하는데 이를 컴포넌트 스캔(Component Scan)이라고 한다.
 
 
 
@@ -78,7 +78,7 @@ UserService userService = (UserService) context.getBean("userService");
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjg1MjExNzU4LC0zMDI5NDMzOCwtMTk1Mz
-Y4ODkzOCwyMDY2MTIzNjc3LDIxNDE4MzQ4ODMsLTM5MjI3Mzcz
-OSwtMzgxNjM3MTcsLTE0NDQ2Nzg2MzJdfQ==
+eyJoaXN0b3J5IjpbLTEyODE3MzY4MTIsLTMwMjk0MzM4LC0xOT
+UzNjg4OTM4LDIwNjYxMjM2NzcsMjE0MTgzNDg4MywtMzkyMjcz
+NzM5LC0zODE2MzcxNywtMTQ0NDY3ODYzMl19
 -->
