--- a/books/Programming Interview/Java/CH16 스프링 프레임워.md
+++ b/books/Programming Interview/Java/CH16 스프링 프레임워.md
@@ -65,8 +65,7 @@ UserService userService = (UserService) context.getBean("userService");
 |애너테이션 기반 설정 방식(annotation-based configuration) |@Componet같은 마커 애너테이션이 부여된 클래스를 탐색해서(Component Scan) DI 컨테이너에 빈을 자동으로 등록하는 방법이다. |
 
 애너테이션 기반 설정 방식
-이 방법은 DI 컨테이너에서 관리할 빈 자체에 빈을 정의하는 애너테이션을 부여한다. 이 애너테이션이 붙은 클래스를 탐색해서 DI 컨테이너에 자동으로 등록하는데 이를 컴포넌트 스캔(Component Scan)이라고 한다.
-
+이 방법은 DI 컨테이너에서 관리할 빈 자체에 빈을 정의하는 애너테이션을 부여한다. **이 애너테이션이 붙은 클래스를 탐색해서 DI 컨테이너에 자동으로 등록하는데 이를 컴포넌트 스캔(Component Scan)이라고 한다.** 또한 의존성 주입도 이제까지 처럼 명시적으로 설정하는 것이 아니라 애노테이션이 붙어 있으면 DI 컨테이너가 자동으로 필요로 하는 의존 컴포넌트를 주입하며 이를 오토 와이어링(Auto Wiring)이라 한다. 
 
 
 
@@ -78,7 +77,7 @@ UserService userService = (UserService) context.getBean("userService");
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEyODE3MzY4MTIsLTMwMjk0MzM4LC0xOT
-UzNjg4OTM4LDIwNjYxMjM2NzcsMjE0MTgzNDg4MywtMzkyMjcz
-NzM5LC0zODE2MzcxNywtMTQ0NDY3ODYzMl19
+eyJoaXN0b3J5IjpbLTE3NDEwOTYzOSwtMzAyOTQzMzgsLTE5NT
+M2ODg5MzgsMjA2NjEyMzY3NywyMTQxODM0ODgzLC0zOTIyNzM3
+MzksLTM4MTYzNzE3LC0xNDQ0Njc4NjMyXX0=
 -->
