--- a/books/Programming Interview/Java/CH16 스프링 프레임워.md
+++ b/books/Programming Interview/Java/CH16 스프링 프레임워.md
@@ -64,10 +64,12 @@ UserService userService = (UserService) context.getBean("userService");
 |XML 기반 설정 방식(XML-based configuration)  |XML 파일을 사용하는 방법으로 <bean> 요소의 클래스 속성에 빈을 기술할 수 있다.|
 |애너테이션 기반 설정 방식(annotation-based configuration) |@Componet같은 마커 애너테이션이 부여된 클래스를 탐색해서(Component Scan) DI 컨테이너에 빈을 자동으로 등록하는 방법이다. |
 
-자바 기반, XML 기반 모두 DI 컨테이너를 만들면서 필요한 Bean을 세팅한다. 그에 반해서 애너테이션 기반은 다른방식이다. 
+자바 기반, XML 기반 모두 DI 컨테이너를 만들면서 필요한 모든 Bean을 세팅한다. 따라서 애플리케이션에서 사용할 모든 컴포넌트 비능ㄹ 자바나 XML로 정의를 해야 하는 번거로움이 있다. 그래서 애너테이션 기반 설정 방법과 병행해서 사용하는 것이 일반적이다. 
 
 애너테이션 기반 설정 방식
 이 방법은 DI 컨테이너에서 관리할 빈 자체에 빈을 정의하는 애너테이션을 부여한다. **이 애너테이션이 붙은 클래스를 탐색해서 DI 컨테이너에 자동으로 등록하는데 이를 컴포넌트 스캔(Component Scan)이라고 한다.** 또한 의존성 주입도 이제까지 처럼 명시적으로 설정하는 것이 아니라 **애노테이션이 붙어 있으면 DI 컨테이너가 자동으로 필요로 하는 의존 컴포넌트를 주입하며 이를 오토 와이어링(Auto Wiring)이라 한다.**
+
+
 
  
 
@@ -81,7 +83,8 @@ UserService userService = (UserService) context.getBean("userService");
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTk1ODk2MzQsLTMyODYwNTU3NSwtMzAyOT
-QzMzgsLTE5NTM2ODg5MzgsMjA2NjEyMzY3NywyMTQxODM0ODgz
-LC0zOTIyNzM3MzksLTM4MTYzNzE3LC0xNDQ0Njc4NjMyXX0=
+eyJoaXN0b3J5IjpbMTU4ODA1NDI1OSwtMzI4NjA1NTc1LC0zMD
+I5NDMzOCwtMTk1MzY4ODkzOCwyMDY2MTIzNjc3LDIxNDE4MzQ4
+ODMsLTM5MjI3MzczOSwtMzgxNjM3MTcsLTE0NDQ2Nzg2MzJdfQ
+==
 -->
