--- a/books/Programming Interview/Java/CH16 스프링 프레임워.md
+++ b/books/Programming Interview/Java/CH16 스프링 프레임워.md
@@ -71,6 +71,13 @@ UserService userService = (UserService) context.getBean("userService");
 
 컴포넌트 스캔을 수행할때는 스캔할 범위를 지정해야 하는데 자바 기반 설정 방식과 XML 기반 설정 방식을 사용할 수 있다. 
 
+```
+@Configuration
+@ComponentScan("com.example.demo")
+public class AppConfig { // }
+```
+
+애플리케이션 컨텍스트 생성시 사용할 Configuration에 @ComponentScan("com.example.demo") 애노테이션을 부여하면 
 
 
  
@@ -85,7 +92,7 @@ UserService userService = (UserService) context.getBean("userService");
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTUwOTIxNTc1NSwtMzI4NjA1NTc1LC0zMD
+eyJoaXN0b3J5IjpbMTU1OTE3NzA5OSwtMzI4NjA1NTc1LC0zMD
 I5NDMzOCwtMTk1MzY4ODkzOCwyMDY2MTIzNjc3LDIxNDE4MzQ4
 ODMsLTM5MjI3MzczOSwtMzgxNjM3MTcsLTE0NDQ2Nzg2MzJdfQ
 ==
