books/Programming Interview/Java/CH16 스프링 프레임워.md updated from https://stackedit.io/

--- a/books/Programming Interview/Java/CH16 스프링 프레임워.md
+++ b/books/Programming Interview/Java/CH16 스프링 프레임워.md
@@ -77,7 +77,13 @@ UserService userService = (UserService) context.getBean("userService");
 public class AppConfig { // }
 ```
 
-애플리케이션 컨텍스트 생성시 사용할 Configuration에 @ComponentScan("com.example.demo") 애노테이션을 부여하면 
+애플리케이션 컨텍스트 생성시 사용할 Configuration에 @ComponentScan("com.example.demo") 애노테이션을 부여하면 해당 패키지(com.example.demo) 이하의 범위에서 애너테이션이 붙은 클래스를 스캔하여, 애플리케이션 컨텍스트에 자동으로 등록한다. 
+
+```
+<beans>
+</beans
+```
+XML기반
 
 
  
@@ -92,7 +98,7 @@ public class AppConfig { // }
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTU1OTE3NzA5OSwtMzI4NjA1NTc1LC0zMD
+eyJoaXN0b3J5IjpbMTIwMTc5MTc0MiwtMzI4NjA1NTc1LC0zMD
 I5NDMzOCwtMTk1MzY4ODkzOCwyMDY2MTIzNjc3LDIxNDE4MzQ4
 ODMsLTM5MjI3MzczOSwtMzgxNjM3MTcsLTE0NDQ2Nzg2MzJdfQ
 ==
