books/Programming Interview/Java/CH16 스프링 프레임워.md updated from https://stackedit.io/

--- a/books/Programming Interview/Java/CH16 스프링 프레임워.md
+++ b/books/Programming Interview/Java/CH16 스프링 프레임워.md
@@ -80,10 +80,13 @@ public class AppConfig { // }
 애플리케이션 컨텍스트 생성시 사용할 Configuration에 @ComponentScan("com.example.demo") 애노테이션을 부여하면 해당 패키지(com.example.demo) 이하의 범위에서 애너테이션이 붙은 클래스를 스캔하여, 애플리케이션 컨텍스트에 자동으로 등록한다. 
 
 ```
-<beans>
-</beans
+<beans
+	xlms=...
+	...
+	<context:component-scan base-package="com.example.demo" />
+</beans>
 ```
-XML기반
+XML기반은 '<context:component-scan>' 태그요소에
 
 
  
@@ -98,8 +101,8 @@ XML기반
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTIwMTc5MTc0MiwtMzI4NjA1NTc1LC0zMD
-I5NDMzOCwtMTk1MzY4ODkzOCwyMDY2MTIzNjc3LDIxNDE4MzQ4
-ODMsLTM5MjI3MzczOSwtMzgxNjM3MTcsLTE0NDQ2Nzg2MzJdfQ
-==
+eyJoaXN0b3J5IjpbLTEwMjQ4MDExNDUsLTMyODYwNTU3NSwtMz
+AyOTQzMzgsLTE5NTM2ODg5MzgsMjA2NjEyMzY3NywyMTQxODM0
+ODgzLC0zOTIyNzM3MzksLTM4MTYzNzE3LC0xNDQ0Njc4NjMyXX
+0=
 -->
