books/Programming Interview/Java/CH16 스프링 프레임워.md updated from https://stackedit.io/

--- a/books/Programming Interview/Java/CH16 스프링 프레임워.md
+++ b/books/Programming Interview/Java/CH16 스프링 프레임워.md
@@ -86,7 +86,7 @@ public class AppConfig { // }
 	<context:component-scan base-package="com.example.demo" />
 </beans>
 ```
-XML기반은 '<context:component-scan>' 태그요소에
+XML기반은 `<context:component-scan>` 태그요소에 
 
 
  
@@ -101,8 +101,8 @@ XML기반은 '<context:component-scan>' 태그요소에
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEwMjQ4MDExNDUsLTMyODYwNTU3NSwtMz
-AyOTQzMzgsLTE5NTM2ODg5MzgsMjA2NjEyMzY3NywyMTQxODM0
-ODgzLC0zOTIyNzM3MzksLTM4MTYzNzE3LC0xNDQ0Njc4NjMyXX
-0=
+eyJoaXN0b3J5IjpbMjEyNzg3MzI5MywtMzI4NjA1NTc1LC0zMD
+I5NDMzOCwtMTk1MzY4ODkzOCwyMDY2MTIzNjc3LDIxNDE4MzQ4
+ODMsLTM5MjI3MzczOSwtMzgxNjM3MTcsLTE0NDQ2Nzg2MzJdfQ
+==
 -->
