books/Programming Interview/Java/CH16 스프링 프레임워.md updated from https://stackedit.io/

--- a/books/Programming Interview/Java/CH16 스프링 프레임워.md
+++ b/books/Programming Interview/Java/CH16 스프링 프레임워.md
@@ -86,7 +86,9 @@ public class AppConfig { // }
 	<context:component-scan base-package="com.example.demo" />
 </beans>
 ```
-XML기반은 `<context:component-scan>` 태그요소에 
+XML기반은 `<context:component-scan>` 태그요소의 base-packages 속성으로 스캔범위를 결정한다. 
+
+
 
 
  
@@ -101,8 +103,8 @@ XML기반은 `<context:component-scan>` 태그요소에
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjEyNzg3MzI5MywtMzI4NjA1NTc1LC0zMD
-I5NDMzOCwtMTk1MzY4ODkzOCwyMDY2MTIzNjc3LDIxNDE4MzQ4
-ODMsLTM5MjI3MzczOSwtMzgxNjM3MTcsLTE0NDQ2Nzg2MzJdfQ
-==
+eyJoaXN0b3J5IjpbLTE3ODM5MDI0NSwyMTI3ODczMjkzLC0zMj
+g2MDU1NzUsLTMwMjk0MzM4LC0xOTUzNjg4OTM4LDIwNjYxMjM2
+NzcsMjE0MTgzNDg4MywtMzkyMjczNzM5LC0zODE2MzcxNywtMT
+Q0NDY3ODYzMl19
 -->
