books/programming-interview/java/CH16 스프링 프레임워크.md updated from https://stackedit.io/

--- a/books/programming-interview/java/CH16 스프링 프레임워크.md
+++ b/books/programming-interview/java/CH16 스프링 프레임워크.md
@@ -1,7 +1,8 @@
 # 스프링 프레임워크
 
-스프링 프레임워크는 POJO(Plain Old Java Object)를 작성하
+스프링 프레임워크는 POJO(Plain Old Java Object)를 생성 및 관리하는 애플리케이션 컨텍스트(DI 컨테이너)라는 핵심 컨테이너에서 
+ 의존성 주입을 이용해 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIyODQ1ODc4NF19
+eyJoaXN0b3J5IjpbLTE3NTU1NzY1NjBdfQ==
 -->
