books/programming-interview/java/CH16 스프링 프레임워크.md updated from https://stackedit.io/

--- a/books/programming-interview/java/CH16 스프링 프레임워크.md
+++ b/books/programming-interview/java/CH16 스프링 프레임워크.md
@@ -1,8 +1,12 @@
 # 스프링 프레임워크
 
 스프링 프레임워크는 POJO(Plain Old Java Object)를 생성 및 관리하는 애플리케이션 컨텍스트(DI 컨테이너)라는 핵심 컨테이너에서 
- 의존성 주입을 이용해 
+ 의존성 주입을 이용해 애플리케이션을 작동한다. 
+
+POJO는 복잡한 프레임워크용 인터페이스를 구현하거나 앱클리케이션에서 사용하려는 추상 클래스를 확장하는 것 같은 불필요한 제한이 없다는 장점이 있다. 
+
+POJO라는 개념은 초기 부터 EJB(Enterprise Java B
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE3NTU1NzY1NjBdfQ==
+eyJoaXN0b3J5IjpbMjA1NjU1ODkzN119
 -->
