--- a/books/programming-interview/java/CH16 스프링 프레임워크.md
+++ b/books/programming-interview/java/CH16 스프링 프레임워크.md
@@ -5,8 +5,8 @@
 
 POJO는 복잡한 프레임워크용 인터페이스를 구현하거나 앱클리케이션에서 사용하려는 추상 클래스를 확장하는 것 같은 불필요한 제한이 없다는 장점이 있다. 
 
-POJO라는 개념은 초기 부터 EJB(Enterprise Java B
+POJO라는 개념은 초기 부터 EJB(Enterprise Java Beans)를 고려해 만들어졌다. 기존에는 단순한 도메인 객체인데도 복잡한 패턴을 따라야 하므로 애플리케이션 서버에서 사용하려면 여러 인터페이스를 구현해야 했다. 코드는 손상되기 쉽고 테스트하기 어려워 졌다. 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjA1NjU1ODkzN119
+eyJoaXN0b3J5IjpbLTc4NjA0NzE5XX0=
 -->
