books/programming-interview/java/CH16 스프링 프레임워크.md updated from https://stackedit.io/

--- a/books/programming-interview/java/CH16 스프링 프레임워크.md
+++ b/books/programming-interview/java/CH16 스프링 프레임워크.md
@@ -25,13 +25,10 @@ ApplicationContext context = new ClasspathXmlApplicationContext(config.xml); //c
 컴포넌트 스캔 설정 방식은 컨테이너로 하여금 어떤 영역을 스캔을 할건지 알려줘야 한다. 스캔 영역을 알려줄때는 자바기반 설정과 XML기반이 있다. 자바기반에서느 
 
 이나사용될 클래스에는 @Componet, @Repository, @Service, @Controller와 같은 애너테이션을 붙인다.
-```
-<
-```
 
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTE1MjEyNzk2MSwxMDc2MjYxMDI1LC02MD
-M4NjQ3MywtNzg2MDQ3MTldfQ==
+eyJoaXN0b3J5IjpbNjQ0MzUyOTU3LDEwNzYyNjEwMjUsLTYwMz
+g2NDczLC03ODYwNDcxOV19
 -->
