--- a/books/programming-interview/java/CH16 스프링 프레임워크.md
+++ b/books/programming-interview/java/CH16 스프링 프레임워크.md
@@ -25,18 +25,21 @@ ApplicationContext context = new ClasspathXmlApplicationContext(config.xml); //c
 
 컴포넌트 스캔 설정 방식은 DI 컨테이너에서 관리할 빈 자체에 빈을 정의하는 애너테이션을 부여한다. **이 애너테이션이 붙은 클래스를 탐색해서 DI 컨테이너에 자동으로 등록하는데 이를 컴포넌트 스캔(Component Scan)이라고 한다.** 또한 의존성 주입도 이제까지 처럼 명시적으로 설정하는 것이 아니라 **애노테이션이 붙어 있으면 DI 컨테이너가 자동으로 필요로 하는 의존 컴포넌트를 주입하며 이를 오토 와이어링(Auto Wiring)이라 한다.**
 
-자바 기반 설정 방식과 XML 기반 설정 방식이 있는데 @ComponentScan을 @Configuration이 붙은 설정 
+자바 기반 설정 방식과 XML 기반 설정 방식이 있는데 @ComponentScan을 @Configuration이 붙은 설정 클래스에 붙이는 것이 자바 기반 설정 방식이다. XML기반은 `<context:component-scan>` 태그요소의 base-packages 속성으로 스캔범위를 결정한다. 
+
 ```
-@Configuration
-@ComponentScan("com.example.demo")
-public class AppConfig { 
-... 
-}
+<beans
+	xlms=...
+	...
+	<context:component-scan base-package="com.example.demo" />
+</beans>
 ```
+
+
 
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTk3ODQwMTY2NiwxMDc2MjYxMDI1LC02MD
+eyJoaXN0b3J5IjpbMTYyMzIwMjI3MywxMDc2MjYxMDI1LC02MD
 M4NjQ3MywtNzg2MDQ3MTldfQ==
 -->
