books/programming-interview/java/CH16 스프링 프레임워크.md updated from https://stackedit.io/

--- a/books/programming-interview/java/CH16 스프링 프레임워크.md
+++ b/books/programming-interview/java/CH16 스프링 프레임워크.md
@@ -1,7 +1,6 @@
 # 스프링 프레임워크
 
-스프링 프레임워크는 POJO(Plain Old Java Object)를 생성 및 관리하는 애플리케이션 컨텍스트(DI 컨테이너)라는 핵심 컨테이너에서 
- 의존성 주입을 이용해 애플리케이션을 작동한다. 
+스프링 프레임워크는 POJO(Plain Old Java Object)를 생성 및 관리하는 애플리케이션 컨텍스트(DI 컨테이너)라는 핵심 컨테이너에서 의존성 주입을 이용해 애플리케이션을 작동한다. 
 
 POJO는 복잡한 프레임워크용 인터페이스를 구현하거나 앱클리케이션에서 사용하려는 추상 클래스를 확장하는 것 같은 불필요한 제한이 없다는 장점이 있다. 
 
@@ -26,7 +25,6 @@ ApplicationContext context = new ClasspathXmlApplicationContext(config.xml); //c
 컴포넌트 스캔 설정 방식은 DI 컨테이너에서 관리할 빈 자체에 빈을 정의하는 애너테이션을 부여한다. **이 애너테이션이 붙은 클래스를 탐색해서 DI 컨테이너에 자동으로 등록하는데 이를 컴포넌트 스캔(Component Scan)이라고 한다.** 또한 의존성 주입도 이제까지 처럼 명시적으로 설정하는 것이 아니라 **애노테이션이 붙어 있으면 DI 컨테이너가 자동으로 필요로 하는 의존 컴포넌트를 주입하며 이를 오토 와이어링(Auto Wiring)이라 한다.**
 
 자바 기반 설정 방식과 XML 기반 설정 방식이 있는데 @ComponentScan을 @Configuration이 붙은 설정 클래스에 붙이는 것이 자바 기반 설정 방식이다. XML기반은 `<context:component-scan>` 태그요소의 base-packages 속성으로 스캔범위를 결정한다. 
-
 ```
 <beans
 	xlms=...
@@ -35,11 +33,13 @@ ApplicationContext context = new ClasspathXmlApplicationContext(config.xml); //c
 </beans>
 ```
 
+> 스코프란 무엇인가?
 
+기본적으로 스프링 빈은 애플리케이션 컨텍스트 초기화될 때 생성되는데, 이를 eager Instan
 
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTYyMzIwMjI3MywxMDc2MjYxMDI1LC02MD
-M4NjQ3MywtNzg2MDQ3MTldfQ==
+eyJoaXN0b3J5IjpbMTQzMTY3OTExLDEwNzYyNjEwMjUsLTYwMz
+g2NDczLC03ODYwNDcxOV19
 -->
