--- a/books/programming-interview/java/CH16 스프링 프레임워크.md
+++ b/books/programming-interview/java/CH16 스프링 프레임워크.md
@@ -35,11 +35,11 @@ ApplicationContext context = new ClasspathXmlApplicationContext(config.xml); //c
 
 > 스코프란 무엇인가?
 
-기본적으로 스프링 빈은 애플리케이션 컨텍스트 초기화될 때 생성되는데, 이를 eager Instan
+기본적으로 스프링 빈은 애플리케이션 컨텍스트 초기화될 때 생성되는데, 이를 eager Instantiation이라고 한다. 
 
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTQzMTY3OTExLDEwNzYyNjEwMjUsLTYwMz
-g2NDczLC03ODYwNDcxOV19
+eyJoaXN0b3J5IjpbLTI1NDYzNDE3NywxMDc2MjYxMDI1LC02MD
+M4NjQ3MywtNzg2MDQ3MTldfQ==
 -->
