books/programming-interview/java/CH16 스프링 프레임워크.md updated from https://stackedit.io/

--- a/books/programming-interview/java/CH16 스프링 프레임워크.md
+++ b/books/programming-interview/java/CH16 스프링 프레임워크.md
@@ -37,9 +37,11 @@ ApplicationContext context = new ClasspathXmlApplicationContext(config.xml); //c
 
 기본적으로 스프링 빈은 애플리케이션 컨텍스트 초기화될 때 생성되는데, 이를 eager Instantiation이라고 한다. 그리고 특별한 설정이 없으면 스프링 빈 인스턴스는 하나만 생성되며, 이를 싱글턴 스코프라고 한다. 
 
+DI 컨테이너가 싱글턴 빈을 제공할때는 현재 실행중인 스레드에서 동시
+
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTQ4NzYwNDk2OSwxMDc2MjYxMDI1LC02MD
+eyJoaXN0b3J5IjpbLTM1Nzc4MjU4OSwxMDc2MjYxMDI1LC02MD
 M4NjQ3MywtNzg2MDQ3MTldfQ==
 -->
