--- a/books/programming-interview/java/CH16 스프링 프레임워크.md
+++ b/books/programming-interview/java/CH16 스프링 프레임워크.md
@@ -37,11 +37,13 @@ ApplicationContext context = new ClasspathXmlApplicationContext(config.xml); //c
 
 기본적으로 스프링 빈은 애플리케이션 컨텍스트 초기화될 때 생성되는데, 이를 eager Instantiation이라고 한다. 그리고 특별한 설정이 없으면 스프링 빈 인스턴스는 하나만 생성되며, 이를 싱글턴 스코프라고 한다. 
 
-DI 컨테이너가 싱글턴 빈을 제공할때는 현재 실행중인 스레드에서 동시
+DI 컨테이너가 싱글턴 빈을 제공할때는 이 빈이 여러 인스턴스에서 이용한다는 것을 고려해야 하기 때문에, 스레드 세이프 해야 한다. 
+
+싱글턴 스코프를 사용하느게 아니라 새 인스턴스를 받고 싶다면 prototype을 사용하면 된다. 
 
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTM1Nzc4MjU4OSwxMDc2MjYxMDI1LC02MD
+eyJoaXN0b3J5IjpbLTg0Nzk1NDAxMiwxMDc2MjYxMDI1LC02MD
 M4NjQ3MywtNzg2MDQ3MTldfQ==
 -->
