--- a/books/programming-interview/java/CH16 스프링 프레임워크.md
+++ b/books/programming-interview/java/CH16 스프링 프레임워크.md
@@ -39,11 +39,11 @@ ApplicationContext context = new ClasspathXmlApplicationContext(config.xml); //c
 
 DI 컨테이너가 싱글턴 빈을 제공할때는 이 빈이 여러 인스턴스에서 이용한다는 것을 고려해야 하기 때문에, 스레드 세이프 해야 한다. 
 
-싱글턴 스코프를 사용하느게 아니라 새 인스턴스를 받고 싶다면 prototype을 사용하면 된다. 
+싱글턴 스코프를 사용하느게 아니라 새 인스턴스를 받고 싶다면 prototype을 사용하면 된다. 그러면 DI 컨테이너에서 getBean 메서드를 호출할때마다 새 인스턴스가 반환된다. 이를 프로토타입 빈 스코프(prototype scope)라고 한다. 
 
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTg0Nzk1NDAxMiwxMDc2MjYxMDI1LC02MD
-M4NjQ3MywtNzg2MDQ3MTldfQ==
+eyJoaXN0b3J5IjpbLTEyNTk0OTYxNDEsMTA3NjI2MTAyNSwtNj
+AzODY0NzMsLTc4NjA0NzE5XX0=
 -->
