--- a/books/programming-interview/java/CH17 하이버네이트 사용하.md
+++ b/books/programming-interview/java/CH17 하이버네이트 사용하.md
@@ -1,7 +1,9 @@
+# 하이버네이트 사용하기
+
 
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNzMwOTk4MTE2XX0=
+eyJoaXN0b3J5IjpbMTc5MjYzOTgxMiw3MzA5OTgxMTZdfQ==
 -->
