books/programming-interview/java/CH17 하이버네이트 사용하.md updated from https://stackedit.io/

--- a/books/programming-interview/java/CH17 하이버네이트 사용하.md
+++ b/books/programming-interview/java/CH17 하이버네이트 사용하.md
@@ -1,9 +1,10 @@
 # 하이버네이트 사용하기
 
-
+하이버네이트는 자바 객체와 데이터베이스 테이블 사이의 매핑을 관리하려고 만들어진 도구다. 보통 ORM(Object Relational Mapping)이라고 한다. 
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTc5MjYzOTgxMiw3MzA5OTgxMTZdfQ==
+eyJoaXN0b3J5IjpbMTYzODQwOTYzMCwxNzkyNjM5ODEyLDczMD
+k5ODExNl19
 -->
