books/programming-interview/java/CH17 하이버네이트 사용하.md updated from https://stackedit.io/

--- a/books/programming-interview/java/CH17 하이버네이트 사용하.md
+++ b/books/programming-interview/java/CH17 하이버네이트 사용하.md
@@ -2,9 +2,12 @@
 
 하이버네이트는 자바 객체와 데이터베이스 테이블 사이의 매핑을 관리하려고 만들어진 도구다. 보통 ORM(Object Relational Mapping)이라고 한다. 
 
+하이버네이트는 데이터베이스 관계를 객체에 매핑하는 도구이므로 이 개체들의 도메인 객체가 있어야 한다. 이 클래스들은 단순한 POJO(Plain Old Java Objects)이고, 각 객체는 데이터 베이스의 한 테이블과 간단하게 연결된다. 
+
+POJO 클래스는 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTYzODQwOTYzMCwxNzkyNjM5ODEyLDczMD
-k5ODExNl19
+eyJoaXN0b3J5IjpbNTc2MDYzOTkzLDE2Mzg0MDk2MzAsMTc5Mj
+YzOTgxMiw3MzA5OTgxMTZdfQ==
 -->
