books/programming-interview/java/CH17 하이버네이트 사용하.md updated from https://stackedit.io/

--- a/books/programming-interview/java/CH17 하이버네이트 사용하.md
+++ b/books/programming-interview/java/CH17 하이버네이트 사용하.md
@@ -4,10 +4,12 @@
 
 하이버네이트는 데이터베이스 관계를 객체에 매핑하는 도구이므로 이 개체들의 도메인 객체가 있어야 한다. 이 클래스들은 단순한 POJO(Plain Old Java Objects)이고, 각 객체는 데이터 베이스의 한 테이블과 간단하게 연결된다. 
 
-여기서 주의할 점으로 POJO 클래스는 인자가 없는 생성자를 반드시 포함해야 한다. 하이버네이트는 객체를 만들때 이 생성자를 이용한다. 그런데 하이버네이트가 
+여기서 주의할 점으로 POJO 클래스는 인자가 없는 생성자를 반드시 포함해야 한다. 하이버네이트는 객체를 만들때 이 생성자를 이용한다. 그런데 하이버네이트가 사용할 생성자가 없으면 문제가 된다. 그렇게 생성 된 객체를 하이버 네이트는 setter 메서드로 인스턴스의 필드를 채운다. 
+
+
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEwMzEwODY4NTksMTYzODQwOTYzMCwxNz
+eyJoaXN0b3J5IjpbLTE1NDMzMjg1ODcsMTYzODQwOTYzMCwxNz
 kyNjM5ODEyLDczMDk5ODExNl19
 -->
