--- a/books/programming-interview/java/CH17 하이버네이트 사용하.md
+++ b/books/programming-interview/java/CH17 하이버네이트 사용하.md
@@ -6,10 +6,19 @@
 
 여기서 주의할 점으로 POJO 클래스는 인자가 없는 생성자를 반드시 포함해야 한다. 하이버네이트는 객체를 만들때 이 생성자를 이용한다. 그런데 하이버네이트가 사용할 생성자가 없으면 문제가 된다. 그렇게 생성 된 객체를 하이버 네이트는 setter 메서드로 인스턴스의 필드를 채운다. 
 
+또 하나 주의할 점은 클래스와 매핑되는 테이블사이에 매핑을 명시해야 한다.
+
+```
+<!DOCTYPE hibernate-mapp0ing PUBLIC
+" ...
+hibernate-mapping-3.0.dtd">
+
+
+```
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE1NDMzMjg1ODcsMTYzODQwOTYzMCwxNz
-kyNjM5ODEyLDczMDk5ODExNl19
+eyJoaXN0b3J5IjpbNTM5NDI0NTE4LC0xNTQzMzI4NTg3LDE2Mz
+g0MDk2MzAsMTc5MjYzOTgxMiw3MzA5OTgxMTZdfQ==
 -->
