books/programming-interview/java/CH17 하이버네이트 사용하.md updated from https://stackedit.io/

--- a/books/programming-interview/java/CH17 하이버네이트 사용하.md
+++ b/books/programming-interview/java/CH17 하이버네이트 사용하.md
@@ -13,12 +13,16 @@
 " ...
 hibernate-mapping-3.0.dtd">
 
+<hibernate-mapping package="com. ...">
+<class name="Person" table="PEOPLE">
+	<id name="id" column="ID"/>
+	<id name="id" column="ID"/>
 
 ```
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTM5NDI0NTE4LC0xNTQzMzI4NTg3LDE2Mz
-g0MDk2MzAsMTc5MjYzOTgxMiw3MzA5OTgxMTZdfQ==
+eyJoaXN0b3J5IjpbLTExNTgyNzU0ODQsLTE1NDMzMjg1ODcsMT
+YzODQwOTYzMCwxNzkyNjM5ODEyLDczMDk5ODExNl19
 -->
