books/programming-interview/java/CH17 하이버네이트 사용하.md updated from https://stackedit.io/

--- a/books/programming-interview/java/CH17 하이버네이트 사용하.md
+++ b/books/programming-interview/java/CH17 하이버네이트 사용하.md
@@ -16,13 +16,17 @@ hibernate-mapping-3.0.dtd">
 <hibernate-mapping package="com. ...">
 <class name="Person" table="PEOPLE">
 	<id name="id" column="ID"/>
-	<id name="id" column="ID"/>
+	<property name="name">
+	...
+</class>
+</hibernate-mapping>
 
 ```
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTExNTgyNzU0ODQsLTE1NDMzMjg1ODcsMT
-YzODQwOTYzMCwxNzkyNjM5ODEyLDczMDk5ODExNl19
+eyJoaXN0b3J5IjpbODk1MzI5ODEwLC0xMTU4Mjc1NDg0LC0xNT
+QzMzI4NTg3LDE2Mzg0MDk2MzAsMTc5MjYzOTgxMiw3MzA5OTgx
+MTZdfQ==
 -->
