books/programming-interview/java/CH17 하이버네이트 사용하.md updated from https://stackedit.io/

--- a/books/programming-interview/java/CH17 하이버네이트 사용하.md
+++ b/books/programming-interview/java/CH17 하이버네이트 사용하.md
@@ -7,6 +7,7 @@
 여기서 주의할 점으로 POJO 클래스는 인자가 없는 생성자를 반드시 포함해야 한다. 하이버네이트는 객체를 만들때 이 생성자를 이용한다. 그런데 하이버네이트가 사용할 생성자가 없으면 문제가 된다. 그렇게 생성 된 객체를 하이버 네이트는 setter 메서드로 인스턴스의 필드를 채운다. 
 
 또 하나 주의할 점은 클래스와 매핑되는 테이블사이에 매핑을 명시해야 한다.
+그리고 파일용 이름을 짓는 규칙은 entity.hbm.xml이다. 
 
 ```
 <!DOCTYPE hibernate-mapp0ing PUBLIC
@@ -26,7 +27,7 @@ hibernate-mapping-3.0.dtd">
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbODk1MzI5ODEwLC0xMTU4Mjc1NDg0LC0xNT
-QzMzI4NTg3LDE2Mzg0MDk2MzAsMTc5MjYzOTgxMiw3MzA5OTgx
-MTZdfQ==
+eyJoaXN0b3J5IjpbLTI5MTI2MDU1Miw4OTUzMjk4MTAsLTExNT
+gyNzU0ODQsLTE1NDMzMjg1ODcsMTYzODQwOTYzMCwxNzkyNjM5
+ODEyLDczMDk5ODExNl19
 -->
