books/programming-interview/java/CH17 하이버네이트 사용하.md updated from https://stackedit.io/

--- a/books/programming-interview/java/CH17 하이버네이트 사용하.md
+++ b/books/programming-interview/java/CH17 하이버네이트 사용하.md
@@ -24,10 +24,30 @@ hibernate-mapping-3.0.dtd">
 
 추가적으로 하이버네이트는 사용할 데이터베이스가 어떤 것이고 경로가 어딘이지 알려줘야 한다. 클래스 패스의 루트 디렉터리에 hibernate.cfg.xml이라는 파일로 저장된다. 
 
+```
+<?xml ver ...
+>
+
+<hibernate-configuration>
+	<session-factory>
+		<propery name = "connection.driver_class"
+			com.mysql.jdbc.Driver
+		<
+<class name="Person" table="PEOPLE">
+	<id name="id" column="ID"/>
+	<property name="name">
+	...
+</class>
+</hibernate-mapping>
+
+
+```
+
+
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE5MzA1OTM2ODksODk1MzI5ODEwLC0xMT
-U4Mjc1NDg0LC0xNTQzMzI4NTg3LDE2Mzg0MDk2MzAsMTc5MjYz
-OTgxMiw3MzA5OTgxMTZdfQ==
+eyJoaXN0b3J5IjpbNzMyNTMwMDI1LC0xOTMwNTkzNjg5LDg5NT
+MyOTgxMCwtMTE1ODI3NTQ4NCwtMTU0MzMyODU4NywxNjM4NDA5
+NjMwLDE3OTI2Mzk4MTIsNzMwOTk4MTE2XX0=
 -->
