books/programming-interview/java/CH17 하이버네이트 사용하.md updated from https://stackedit.io/

--- a/books/programming-interview/java/CH17 하이버네이트 사용하.md
+++ b/books/programming-interview/java/CH17 하이버네이트 사용하.md
@@ -30,9 +30,15 @@ hibernate-mapping-3.0.dtd">
 
 <hibernate-configuration>
 	<session-factory>
-		<propery name = "connection.driver_class"
+		<property name = "connection.driver_class"
 			com.mysql.jdbc.Driver
-		<
+		<property>
+		<property name = "connection.url">
+			jdbc:mysql://localhost:3306/ticket
+		<property>
+		<property name="connection.username">name<property>
+		<property name="connection.username">name<property>
+
 <class name="Person" table="PEOPLE">
 	<id name="id" column="ID"/>
 	<property name="name">
@@ -47,7 +53,7 @@ hibernate-mapping-3.0.dtd">
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNzMyNTMwMDI1LC0xOTMwNTkzNjg5LDg5NT
-MyOTgxMCwtMTE1ODI3NTQ4NCwtMTU0MzMyODU4NywxNjM4NDA5
-NjMwLDE3OTI2Mzk4MTIsNzMwOTk4MTE2XX0=
+eyJoaXN0b3J5IjpbLTE3NDUzMTc2MDgsLTE5MzA1OTM2ODksOD
+k1MzI5ODEwLC0xMTU4Mjc1NDg0LC0xNTQzMzI4NTg3LDE2Mzg0
+MDk2MzAsMTc5MjYzOTgxMiw3MzA5OTgxMTZdfQ==
 -->
